web/themes/custom/glazed_subtheme/css/style.css
/* ... */
#rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
    left: 0 !important;
}

#rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
    margin: -51px auto 0;
}

body.path-search a:hover,
body.path-search a:focus {
    color: #0b88ff;
    text-decoration: none;
}

body.path-search ol,
body.path-search ul {
    padding-left: 3em;
}

body.path-search ol.pagination,
body.path-search ul.pagination {
    padding-left: 1.5em;
}

#rocket.path-search ol li {
    margin-bottom: 1rem;
    padding: 1rem 0 0.3rem 0;
    border-top: 1px solid white;
}

#rocket.path-search ol li:first-child {
    border-top: none;
}

.pager__item.pager__item--first {
    position: relative;
}

.pager__item.pager__item--first span {
    text-indent: -9999px;
    font-size: 0px;
}

.pager__item.pager__item--first span::after {
    position: absolute;
    content: "\f105";
    font-family: 'FontAwesome';
    left: 0px;
    top: 0px;
}


/*----- 23-aug-2022------*/
#block-rocketlandingcontentwithimage .az-ctnr.container {
    width: auto;
}

#block-rocketlandingcontentwithimage .az-ctnr.container .col-sm-4 {
    padding-right: 0px !important;
}

@media (max-width: 991px) {
    #block-rocketlandingcontentwithimage .az-ctnr.container .col-sm-8 {
        width: 100%;
    }

    #block-rocketlandingcontentwithimage .az-ctnr.container .col-sm-4 {
        padding-left: 0px !important;
    }
}

#rocket.page-node-type-landing-page .view-id-landing_image {
    padding-top: 0px !important;
}

#rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
    left: 0px !important;
}

.row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
    padding-bottom: 8px;
}


.glazed-fluid.content-top-container {
    overflow: hidden;
}

.landing-list-item .landing-list-button a.landing-list-button-inner {
    text-indent: 0 !important;
}

#rocket .view-display-id-categories .landing-list-item .landing-list-button {
    width: 30px !important;
    justify-content: center;
    align-items: center;
}

/*#rocket .landing-list-item .landing-list-button i {
    font-size: 23px !important;
    color: #fff;
    line-height: normal !important;
    width: auto !important;
}*/

@media only screen and (max-width: 1024px) {
    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
        padding-left: 0px;
        padding-right: 0px;
        width: 100% !important;
    }

    #rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
        margin: 15px 0px 0;
    }

    #block-rocketlandingcontentwithimage .az-ctnr.container {
        padding: 0;
    }
}

/*----- 23-aug-2022------*/

/*24-Aug-2022 work by rahul*/
section#block-views-block-landing-carousels-block-1 {
    overflow: hidden;
}

.row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists {
    padding: 2rem 0 5rem;
}

.view-id-rocket_landing_page_lists.view-display-id-block_1.custom-defence-node {
    margin: 0 0px 8px;
}

.view-id-rocket_landing_page_lists.view-display-id-block_1.custom-defence-node .view-content {
    margin-left: -6px;
    margin-right: -6px;
}

.product-no-tabs #block-rockettabs {
    display: none;
}

.block-views-blocklanding-carousels-block-1 .form-group {
    margin-bottom: 0 !important;
}

/* #rocket .view-display-id-categories .landing-list-item .landing-list-button,
#rocket .view-display-id-categories_innovation .landing-list-item .landing-list-button,
#rocket .view-id-rocket_landing_page_lists.view-display-id-block_1 .landing-list-item .landing-list-button {
    width: 40px !important;
    flex: 0 0 40px !important;
} */
#rocket .view-id-rocket_landing_page_lists.view-display-id-block_1.custom-defence-node .landing-list-item .landing-list-button {
    width: 40px;
}

#rocket.page-node-type-landing-page .landing-content-main-content {
    padding-bottom: 1rem;
}

#rocket.page-node-type-landing-page .landing-content-main-content,
#rocket.page-node-type-landing-page .landing-content-main-content a.none {
    padding-top: 17px;
}

@media only screen and (max-width: 1200px) {
    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
        width: 50% !important;
    }
}
/* ... */

